crates/toml/tests/snapshots/invalid/string/basic-unknown-escape.stderr
TOML parse error at line 1, column 7
  |
1 | a = "\@"
  |       ^
missing escaped value, expected `b`, `e`, `f`, `n`, `r`, `\`, `"`, `x`, `u`, `U`
